--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,27 +48,18 @@
         <div class="slide-contaienr">
             <div class="video-slide">
                 <div class="thumb video">
-                    <iframe src="http://player.youku.com/embed/XNTEyMDQxNjY4" frameborder=0 allowfullscreen></iframe>
-                    <div class="desc">
-                        中国园区产业大会2016 回顾
-                    </div>
-                    <div class="desc-bg"></div>
-                </div>
-
-                <div class="thumb">
-                    <a href="#" class="link-block">
-                        <img src="../img/bg.jpg">
-                        <span>2016中国产业园区大会回顾</span>
+                    <a href="http://v.youku.com/v_show/id_XNTEyMDQxNjY4.html?from=s1.8-1-1.2" class="link-block" target="_blank">
+                        <img src="http://www.cdmc.org.cn/cn/images/pic/who2-2.jpg">
+                        <span>CDMC上海决策者经济顾问有限公司</span>
                     </a>
                     <div class="desc">
-                        中国园区产业大会2016 回顾
+                        CDMC上海决策者经济顾问有限公司
                     </div>
                     <div class="desc-bg"></div>
                 </div>
 
-
                 <div class="thumb">
-                    <a href="#" class="link-block">
+                    <a href="http://www.thecipc.org.cn/" class="link-block" target="_blank">
                         <img src="../img/banner.jpg">
                         <span>2016中国产业园区大会回顾</span>
                     </a>
@@ -78,22 +69,19 @@
                     <div class="desc-bg"></div>
                 </div>
 
-
-                <div class="thumb">
-                    <a href="#" class="link-block">
-                        <img src="../img/banner.jpg">
-                        <span>2016中国产业园区大会回顾</span>
+                <div class="thumb video">
+                    <a href="http://v.youku.com/v_show/id_XMTQwOTk3MDkyNA==.html" class="link-block" target="_blank">
+                        <img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg">
                     </a>
                     <div class="desc">
-                        中国园区产业大会2016 回顾
+                        第八届互联网金融与支付创新年度盛会
                     </div>
                     <div class="desc-bg"></div>
                 </div>
 
                 <div class="thumb">
-                    <a href="#" class="link-block">
-                        <img src="../img/bg-2.jpg">
-                        <span>2016中国产业园区大会回顾</span>
+                    <a href="http://www.cors.org.cn/" class="link-block" target="_blank">
+                        <img src="http://elbucket.qiniudn.com/o_1aef499v81qtm1kcl1tmdvv3ip243.png?imageMogr2/thumbnail/1436">
                     </a>
                     <div class="desc">
                         中国园区产业大会2016 回顾
