--- a/src/html/common/footer.html
+++ b/src/html/common/footer.html
@@ -1,4 +1,4 @@
-    <footer>
+    <footer style="display:none;">
     	<div class="container">
     		<div class="left-side">
         		<img src="../img/CDMC-logo.png" alt="">
