remove the padding-bottom and linkedin img

--- a/src/html/hire.html
+++ b/src/html/hire.html
@@ -2,7 +2,7 @@
 <body class="page-hire" idx="hire">
 <!--include('./common/navigator.html')-->
 <div class="container site-content hire">
-	<div style="width:80%; padding-bottom: 200px">
+	<div style="width:80%;">
 		<h2>用人理念</h2>
 		<!--<img src="http://www.cdmc.org.cn/images/57376.jpg" width="202" height="120" align="right">-->
 		<strong>人是CDMC最重要的资产</strong>
