update the logo link

--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -4,7 +4,7 @@
         <div class="container">
             <nav class="navbar" role="navigation">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="./">
+                    <a class="navbar-brand" href="./index.html">
                         <img src="../img/logo.png" alt="">
                     </a>
                 </div>
