--- a/src/html/events.html
+++ b/src/html/events.html
@@ -4,18 +4,72 @@
 <div class="container site-content">
     <div class="row">
         <div class="main-event col-xs-8">
-            <a href="http://www.theifpi.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg?imageMogr2/thumbnail/1436"></a>
+            <a href="http://www.theifpi.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg?imageMogr2/thumbnail/800"></a>
             <p class="name">第八届互联网金融与支付创新年度盛会</p>
             <p class="date">2016年4月24-26日  中国 深圳</p> 
             <p class="desc"></p>
         </div>
         <div class="col-xs-4 other-events">
-            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahq3qvme16ja1b0npis16adjtd2g.jpg?imageMogr2/thumbnail/210"></a>
-            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agpgi39l1iv713np1dsf16ln1j4q11.png?imageMogr2/thumbnail/210"></a>
-            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahgnmhk0jmeo08128ueafnta133.jpg?imageMogr2/thumbnail/210"></a>
-            <a href="http://www.gaaf-annual.com/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agphg6u1li610vm1c4ghf881a2t.jpg?imageMogr2/thumbnail/210"></a>
-            <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1ahq3qvme16ja1b0npis16adjtd2g.jpg?imageMogr2/thumbnail/210"></a>
-            <a href="http://www.cpf-annual.com/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1agpgtb1811kd16hm1r0b1pv81ctn1v.jpg?imageMogr2/thumbnail/210"></a>
+            <p class="thumb" index="0">
+                <img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg?imageMogr2/thumbnail/800">
+            </p>
+            <p class="thumb" index="1">
+                <img src="http://elbucket.qiniudn.com/o_1adih4pc1ag21hur50m1n3fnd61i.jpg?imageMogr2/thumbnail/800">
+            </p>
+            <p class="thumb" index="2">
+                <img src="http://elbucket.qiniudn.com/o_1ag22f9ud1vet13s6p0q7s2tu1g.jpg?imageMogr2/thumbnail/800">
+            </p>
+            <p class="thumb" index="3">
+                <img src="http://elbucket.qiniudn.com/o_1aaic35s61ed617r9qpk14i01i912h.jpg?imageMogr2/thumbnail/800">
+            </p>
+            <p class="thumb" index="4">
+                <img src="http://elbucket.qiniudn.com/o_1ahss9egande3t6doq1jbp1dck8.jpg?imageMogr2/thumbnail/800">
+            </p>
+            <p class="thumb" index="5"><img src="http://elbucket.qiniudn.com/o_1aanl1ovvonrr4j1t341fq32jki.jpg?imageMogr2/thumbnail/800"></p>
+        </div>
+
+        <div class="details" style="display:none">
+            <div class="item" index="0">
+                <a href="http://www.theifpi.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">第八届互联网金融与支付创新年度盛会</p>
+                <p class="date">2016年4月24-26日  中国 深圳</p> 
+                <p class="desc"></p>
+            </div>
+
+            <div class="item" index="1">
+                <a href="http://www.theifpi.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1adih4pc1ag21hur50m1n3fnd61i.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">2016年第六届中国国际储能大会</p>
+                <p class="date">2016年4月24-25日  中国 深圳</p> 
+                <p class="desc"></p>
+            </div>
+
+            <div class="item" index="2">
+                <a href="http://www.sinomanuf.com" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ag22f9ud1vet13s6p0q7s2tu1g.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">第二届中国智能制造峰会</p>
+                <p class="date">2016年11月9-10日  中国 上海</p> 
+                <p class="desc"></p>
+            </div>
+
+            <div class="item" index="3">
+                <a href="http://www.gaaf-annual.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1aaic35s61ed617r9qpk14i01i912h.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">全球资产配置聚焦2016</p>
+                <p class="date">2016年5月27-28日  中国 上海</p> 
+                <p class="desc"></p>
+            </div>
+
+            <div class="item" index="4">
+                <a href="http://www.esa-annual.com" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ahss9egande3t6doq1jbp1dck8.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">澳洲储能大会2016</p>
+                <p class="date">2016年10月11-12日  澳大利亚 墨尔本</p> 
+                <p class="desc"></p>
+            </div>
+
+            <div class="item" index="5">
+                <a href="http://www.cpf-annual.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1aanl1ovvonrr4j1t341fq32jki.jpg?imageMogr2/thumbnail/800"></a>
+                <p class="name">澳洲储能大会2016</p>
+                <p class="date">2016年5月26-27日  中国 上海</p> 
+                <p class="desc"></p>
+            </div>
         </div>
     </div>
     <hr>
