--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,8 +47,8 @@
         <div class='slick-next-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-right'></i></div>
         <div class="slide-contaienr">
             <div class="video-slide">
-                <div class="thumb video">
-                    <a href="http://v.youku.com/v_show/id_XNTEyMDQxNjY4.html?from=s1.8-1-1.2" class="link-block" target="_blank">
+                <div class="thumb video" data-toggle="modal" data-target="#videoModal-1">
+                    <a class="link-block" target="_blank">
                         <img src="http://www.cdmc.org.cn/cn/images/pic/who2-2.jpg">
                         <span>CDMC上海决策者经济顾问有限公司</span>
                     </a>
@@ -69,8 +69,8 @@
                     <div class="desc-bg"></div>
                 </div>
 
-                <div class="thumb video">
-                    <a href="http://v.youku.com/v_show/id_XMTQwOTk3MDkyNA==.html" class="link-block" target="_blank">
+                <div class="thumb video" data-toggle="modal" data-target="#videoModal-2">
+                    <a class="link-block" target="_blank">
                         <img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg">
                     </a>
                     <div class="desc">
@@ -90,6 +90,26 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="modal fade" id="videoModal-1">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <iframe height=498 width=100% src="http://player.youku.com/embed/XNTEyMDQxNjY4" frameborder=0 allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="videoModal-2">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+            <iframe height=498 width=100% src="http://player.youku.com/embed/XMTQwOTk3MDkyNA==" frameborder=0 allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- business -->
