--- a/src/html/common/footer.html
+++ b/src/html/common/footer.html
@@ -50,6 +50,7 @@
     </footer>
     <script src="../lib/jquery.min.js"></script>
     <script src="../lib/slick/slick.min.js"></script>
+    <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="../lib/cvm.js"></script>
     <script src="../js/app.js"></script>
 </body>
