--- a/src/html/about/footer.html
+++ b/src/html/about/footer.html
@@ -23,7 +23,7 @@
         				</li>
         				<li>
         					<a href="https://www.linkedin.com/company/692180" target="_blank">
-        						<img src="../../img/linkedin.png" alt="">
+        						<img src="../../img/in.png" alt="">
         					</a>
         				</li>
         				<li>
