--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,11 +7,6 @@
         <div class="slide">
             <div class="banner-item">
                 <img src="../img/banner.jpg">
-                <div class="heading">
-                    <p class="name">CDMC Events</p>
-                    <p class="title-en">Asian Conference Leader</p>
-                    <p class="title-cn">亚洲国际第一品牌</p>
-                </div>
             </div>
             <div class="banner-item">
                 <a href="http://www.oc-annual.com" target="_blank">
@@ -43,25 +38,24 @@
 
     <!-- video -->
     <div id="video-container">
-        <div class='slick-prev-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-left'></i></div>
-        <div class='slick-next-arrow slick-arrow'><i class='glyphicon glyphicon-chevron-right'></i></div>
+        <div class='slick-prev-arrow slick-arrow'><img src="../img/bw.png" alt=""></div>
+        <div class='slick-next-arrow slick-arrow'><img src="../img/fw.png" alt=""></div>
         <div class="slide-contaienr">
             <div class="video-slide">
-                <div class="thumb video" data-toggle="modal" data-target="#videoModal-1">
-                    <a class="link-block" target="_blank">
+                <div class="thumb video" >
+                    <a class="link-block" target="_blank" href="http://v.youku.com/v_show/id_XNTEyMDQxNjY4.html">
                         <img src="http://www.cdmc.org.cn/cn/images/pic/who2-2.jpg">
-                        <span>CDMC上海决策者经济顾问有限公司</span>
                     </a>
                     <div class="desc">
                         CDMC上海决策者经济顾问有限公司
                     </div>
                     <div class="desc-bg"></div>
+                    <i class="glyphicon glyphicon-play"></i>
                 </div>
 
                 <div class="thumb">
                     <a href="http://www.thecipc.org.cn/" class="link-block" target="_blank">
                         <img src="../img/banner.jpg">
-                        <span>2016中国产业园区大会回顾</span>
                     </a>
                     <div class="desc">
                         中国园区产业大会2016 回顾
@@ -69,14 +63,15 @@
                     <div class="desc-bg"></div>
                 </div>
 
-                <div class="thumb video" data-toggle="modal" data-target="#videoModal-2">
-                    <a class="link-block" target="_blank">
+                <div class="thumb video">
+                    <a class="link-block" target="_blank" href="http://v.youku.com/v_show/id_XMTQwOTk3MDkyNA==.html">
                         <img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg">
                     </a>
                     <div class="desc">
                         第八届互联网金融与支付创新年度盛会
                     </div>
                     <div class="desc-bg"></div>
+                    <i class="glyphicon glyphicon-play"></i>
                 </div>
 
                 <div class="thumb">
