[sean] - update text of banner

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,10 +28,10 @@
 
         <div class="bottom-block">
             <ul>
-                <li class="active bd-right" sid="0"><a href="#">CDMC</a></li>
-                <li class="bd-right" sid="1"><a href="#">中国海洋油气大会</a></li>
-                <li class="bd-right" sid="2"><a href="#">中国国际储能电站大会</a></li>
-                <li sid="3"><a href="#">主题公园与景区</a></li>
+                <li class="active bd-right" sid="0"><a href="#">如果您是合作伙伴</a></li>
+                <li class="bd-right" sid="1"><a href="#">如果您是客户</a></li>
+                <li class="bd-right" sid="2"><a href="#">如果您是应聘者</a></li>
+                <li sid="3"><a href="#">如果您是投资人</a></li>
             </ul>
         </div>  
     </div>
