[sean] - remove the vision page, and update the aboutus

--- a/src/html/about/aboutus.html
+++ b/src/html/about/aboutus.html
@@ -8,7 +8,6 @@
                 <li class="active"><a href="./aboutus.html">
                     <span class="glyphicon glyphicon-record" aria-hidden="true"></span> 关于公司</a>
                     <ul class="sub-ul">
-                        <li><a href="./vision.html">战略愿景</a></li>
                         <li><a href="./event.html">集团大事记</a></li>
                         <li><a href="./ourteam.html">团队</a></li>
                         <li><a href="./consulting.html">顾问</a></li>
@@ -22,61 +21,7 @@
     </div>
 
     <div class="col-md-9">
-
-        <div class="left-bar">
-            <h3>我们的公司</h3>
-            <h5>about cdmc</h5>
-        </div>
-
-        <div>
-            <p>
-                上海决策者经济顾问有限公司致力于推动知识和商业信息的的全球化流动,为企业决策者搭建知识和交流的平台,为他们创造商业机遇成为企业决策层不可或缺的一部分.
-            </p>
-        </div>
-
-        <div class="feature-image">
-        </div>
-
-        <div>
-            <h4>我们的愿景</h4>
-            <p>
-                我们致力于打造中国商业机会的第一平台,成为亚太地区辉夜行业的标杆企业.我们愿意和您一起成长见证中国经济的腾飞.
-            </p>
-        </div>
-
-        <div>
-            <h4>我们的价值观</h4>
-            <p>
-                为了实现上述愿景,CDMC已形成一套商业规范来指导我们的行动方向,并以成就客户 诚信正直以及合作共赢作为我们的核心价值.
-            </p>
-        </div>
-
-        <div>
-            <h4>成就客户</h4>
-            <p>
-                我们致力于每一位客户的满意和成功,努力创造超越客户预期的价值.
-            </p>
-        </div>
-
-        <div>
-            <h4>诚信正直</h4>
-            <p>
-                我们秉持信任 诚实和责任感,无论是对内部还是外部.
-            </p>
-        </div>
-        <div>
-            <h4>合作共赢</h4>
-            <p>
-                我们倡导全球化背景下的互相理解,互相尊重,分享智慧,合作共赢.
-            </p>
-        </div>
-        <div style="padding-bottom: 40px;">
-            <h4>我们的卓尔不群</h4>
-            <p>
-                我们的独特之处在于我们能够为贵公司和中国相关政府监督层搭建无与伦比的沟通桥梁,以为我们拥有一支实力强大的咨询团队, 其中包括中国的高层政府官员、
-                知名学者、产业专家. 而CDMC所有活动都因获得了相关政府机构的授权和支持而独具权威性.
-            </p>
-        </div>
+        <div bmy-channel channelid="311"></div>
     </div>
 </div>
 <!--</div>-->
