--- a/src/html/common/header.html
+++ b/src/html/common/header.html
@@ -8,4 +8,5 @@
     <link rel="shortcut icon" href="../img/CDMC-logo.png">
     <link rel="stylesheet" href="../css/app.css">
     <link rel="stylesheet" href="../lib/slick/slick.css">
+    <link rel="stylesheet" href="../lib/mediaelement/mediaelementplayer.css" />
 </head>
