--- a/src/html/common/footer.html
+++ b/src/html/common/footer.html
@@ -34,6 +34,7 @@
     <script src="../lib/jquery.min.js"></script>
     <script src="../lib/slick/slick.min.js"></script>
     <script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../lib/mediaelement/mediaelement-and-player.min.js"></script>
     <script src="../lib/cvm.js"></script>
     <script src="../js/app.js"></script>
 </body>
