--- a/src/html/index.html
+++ b/src/html/index.html
@@ -42,12 +42,12 @@
         <div class='slick-next-arrow slick-arrow'><img src="../img/fw.png" alt=""></div>
         <div class="slide-contaienr">
             <div class="video-slide">
-                <div class="thumb video" vid="v1">
+                <div class="thumb video" vid="v2">
                     <div class="link-block" target="_blank" href="http://v.youku.com/v_show/id_XNTEyMDQxNjY4.html">
                         <img src="http://www.cdmc.org.cn/cn/images/pic/who2-2.jpg">
                     </div>
                     <div class="desc">
-                        CDMC上海决策者经济顾问有限公司
+                        2016第五届主题公园与景区国际峰会
                     </div>
                     <div class="desc-bg"></div>
                     <i class="glyphicon glyphicon-play"></i>
@@ -63,7 +63,7 @@
                     <div class="desc-bg"></div>
                 </div>
 
-                <div class="thumb video" vid="v2">
+                <div class="thumb video" vid="v1">
                     <div class="link-block" target="_blank" href="http://v.youku.com/v_show/id_XMTQwOTk3MDkyNA==.html">
                         <img src="http://elbucket.qiniudn.com/o_1ajj289is4qgehu1vvj1gmtrr08.jpg">
                     </div>
