[sean] - 添加首页链接内容

--- a/src/html/about/to_candidates.html
+++ b/src/html/about/to_candidates.html
@@ -3,14 +3,14 @@
 <!--include('./navigator.html')-->
 <div class="container site-content aboutus">
     <div class="col-md-3" role="navigation">
-        <nav class="bs-docs-sidebar">
+        <nav class="nav bs-docs-sidebar">
             <ul class="nav bs-docs-sidenav ul-block">
                 <li><a href="./aboutus.html">
                     <span class="glyphicon glyphicon-record" aria-hidden="true"></span> 关于公司</a>
-                    <ul class="sub-ul ul-block">
+                    <ul class="sub-ul">
                         <li><a href="./event.html">集团大事记</a></li>
                         <li><a href="./ourteam.html">团队</a></li>
-                        <li class="active"><a href="./consulting.html">权威推荐</a></li>
+                        <li><a href="./consulting.html">权威推荐</a></li>
                     </ul>
                 </li>
                 <li><a href="./honor.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 荣誉资质</a></li>
@@ -18,20 +18,19 @@
                 <li><a href="./partner.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 合作伙伴</a></li>
                 <li>
                     <a><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 您想要了解的决策者</a>
-                    <ul class="sub-ul">
+                    <ul class="nav bs-docs-sidenav ul-block">
                         <li><a href="./to_partners.html">如果您是合作伙伴</a></li>
                         <li><a href="./to_customers.html">如果您是客户</a></li>
-                        <li><a href="./to_candidates.html">如果您是应聘者</a></li>
+                        <li class="active"><a href="./to_candidates.html">如果您是应聘者</a></li>
                         <li><a href="./to_investors.html">如果您是投资人</a></li>
                     </ul>
                 </li>
-
             </ul>
         </nav>
     </div>
 
     <div class="col-md-9">
-        <div bmy-channel channelid="312"></div>
+        <div bmy-channel channelid="361"></div>
     </div>
 </div>
 <!--</div>-->
