--- a/src/html/business/medical.html
+++ b/src/html/business/medical.html
@@ -5,11 +5,11 @@
     <div class="col-md-2" role="navigation">
         <nav class="nav bs-docs-sidebar">
             <ul class="nav bs-docs-sidenav sub-ul">
-                <li><a href="./business.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 主办会议</a></li>
-                <li><a href="./undertake.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 承办会议</a></li>
-                <li><a href="./park.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 园区大会</a></li>
-                <li class="active"><a href="./medical.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 麦峰医疗</a></li>
-                <li><a href="./internet.html"><span class="glyphicon glyphicon-record" aria-hidden="true"></span> 互联网团队</a></li>
+                <li><a href="./business.html"><span class="glyphicon glyphicon-record" ></span> 主办会议</a></li>
+                <li><a href="./undertake.html"><span class="glyphicon glyphicon-record" ></span> 承办会议</a></li>
+                <li><a href="./park.html"><span class="glyphicon glyphicon-record" ></span> 园区大会</a></li>
+                <li class="active"><a href="./medical.html"><span class="glyphicon glyphicon-record" ></span> 麦峰医疗</a></li>
+                <li><a href="./internet.html"><span class="glyphicon glyphicon-record" ></span> 互联网团队</a></li>
             </ul>
         </nav>
     </div>
