--- a/src/html/events.html
+++ b/src/html/events.html
@@ -78,80 +78,73 @@
         <div class="col-xs-8">
             <ul class="event-list">
                 <li>
-                    <a href="http://www.essc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa.png"></a>
+                    <a href="http://www.ffa-annual.com/en" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa.png"></a>
                     <p>
-                        <a href="http://www.essc.org.cn/" target="_blank" class="name">2016第六届中国国际储能电站大会</a>
-                        2016年4月24-26日  中国 深圳
+                        <a href="http://www.ffa-annual.com/en" target="_blank" class="name">亚洲FPSO&FLNG大会</a>
+                        2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.cpf-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/573b3d6b00a0d413.jpg"></a>
+                    <a href="http://www.esa-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/573b3d6b00a0d413.jpg"></a>
                     <p>
-                        <a href="http://www.cpf-annual.com" target="_blank" class="name">2016第十届中国石化聚焦峰会</a>
-                        2016年5月26日-27日 中国 上海
+                        <a href="http://www.esa-annual.com" target="_blank" class="name">澳洲储能大会</a>
+                        2016年10月11日-12日  澳大利亚 墨尔本
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi.png"></a>
+                    <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi.png"></a>
                     <p>
-                        <a href="http://www.theifpi.com/" target="_blank" class="name">第七届互联网金融与支付创新大会2016</a>
-                        2016年4月7-8日  中国北京
+                        <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="name">第三届中国商用车国际大会</a>
+                        2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.tpasa.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/tpasa.png"></a>
+                    <a href="http://www.iic-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/tpasa.png"></a>
                     <p>
-                        <a href="http://www.tpasa.org.cn/" target="_blank" class="name">2016第五届主题公园与景区国际峰会</a>
-                        2016年5月19-20日 中国 上海
+                        <a href="http://www.iic-annual.com/" target="_blank" class="name">印尼基础设施建设暨“一带一路”投资峰会</a>
+                        2016年10月20-21日  印尼 雅加达
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.gvc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/r7_06.jpg"></a>
+                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/r7_06.jpg"></a>
                     <p>
-                        <a href="http://www.gvc-annual.com/" target="_blank" class="name">2016第七届绿色汽车峰会</a>
-                        2016年5月12-13日 | 中国，深圳
+                        <a href="#" target="_blank" class="name">数字营销先锋大会</a>
+                        2016年11月03-04日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.cors.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cors.png"></a>
+                    <a href="http://www.cipc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cors.png"></a>
                     <p>
-                        <a href="http://www.cors.org.cn/" target="_blank" class="name">2016第四届中国全渠道零售峰会</a>
-                        2016年5月26日-27日  中国 北京
+                        <a href="http://www.cipc-annual.org.cn/" target="_blank" class="name">中国产业园区大会</a>
+                        2016年11月09-10日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.gtf.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
+                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
                     <p>
-                        <a href="http://www.gtf.org.cn/" target="_blank" class="name">2016中国燃气轮机聚焦</a>
-                        2016年4月27日-28日 中国 深圳
+                        <a href="#" target="_blank" class="name">第二届中国智能制造峰会</a>
+                        2016年11月09-10日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.thecipc.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
+                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
                     <p>
-                        <a href="http://www.thecipc.org.cn/" target="_blank" class="name">2016中国产业园区大会</a>
-                        2016年11月9-10日  中国 上海
+                        <a href="http://www.theifpi.com/" target="_blank" class="name">第八届互联网金融与支付创新2016年度盛会</a>
+                        2016年11月16-18日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.gaaf-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gaaf.jpg"></a>
+                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gaaf.jpg"></a>
                     <p>
-                        <a href="http://www.gaaf-annual.com/" target="_blank" class="name">2016全球资产配置</a>
-                        2016年5月26-27日 中国上海
+                        <a href="http://www.eis-annual.com/" target="_blank" class="name">2016能源互联网暨“一带一路”高峰论坛</a>
+                        2016年12月07-08日 中国 北京
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.ffa-annual.com/cn" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
+                    <a href="http://www.dap-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
                     <p>
-                        <a href="http://www.ffa-annual.com/cn" target="_blank" class="name"><strong>亚洲FPSO &amp; FLNG大会2016 </strong></a>
-                        2016年9月22日-23日 中国·上海
-                    </p>
-                </li>
-                <li>
-                    <a href="http://www.oc-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/oc1.png"></a>
-                    <p>
-                        <a href="http://www.oc-annual.com/" target="_blank" class="name">2016第十二届中国国际海洋油气大会暨展览会</a>
-                        2016年5月26-27日 中国深圳
+                        <a href="http://www.dap-annual.com/" target="_blank" class="name">第十三届亚太海洋油气大会</a>
+                        2016年12月07-08日 印尼 雅加达
                     </p>
                 </li>
             </ul>
