--- a/src/html/events.html
+++ b/src/html/events.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="item" index="1">
-                <a href="http://www.theifpi.com/" target="_blank"><img src="http://elbucket.qiniudn.com/o_1adih4pc1ag21hur50m1n3fnd61i.jpg?imageMogr2/thumbnail/800"></a>
+                <a href="http://www.essc.org.cn" target="_blank"><img src="http://elbucket.qiniudn.com/o_1adih4pc1ag21hur50m1n3fnd61i.jpg?imageMogr2/thumbnail/800"></a>
                 <p class="name">2016年第六届中国国际储能大会</p>
                 <p class="date">2016年4月24-25日  中国 深圳</p> 
                 <p class="desc"></p>
@@ -45,7 +45,7 @@
 
             <div class="item" index="2">
                 <a href="http://www.sinomanuf.com" target="_blank"><img src="http://elbucket.qiniudn.com/o_1ag22f9ud1vet13s6p0q7s2tu1g.jpg?imageMogr2/thumbnail/800"></a>
-                <p class="name">第二届中国智能制造峰会</p>
+                <p class="name">中国“互联网+制造业”高峰论坛2016</p>
                 <p class="date">2016年11月9-10日  中国 上海</p> 
                 <p class="desc"></p>
             </div>
@@ -78,48 +78,48 @@
         <div class="col-xs-8">
             <ul class="event-list">
                 <li>
-                    <a href="http://www.ffa-annual.com/en" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa.png"></a>
+                    <a href="http://www.ffa-annual.com/en" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
                     <p>
                         <a href="http://www.ffa-annual.com/en" target="_blank" class="name">亚洲FPSO&FLNG大会</a>
                         2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.esa-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/573b3d6b00a0d413.jpg"></a>
+                    <a href="http://www.esa-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa2.png"></a>
                     <p>
                         <a href="http://www.esa-annual.com" target="_blank" class="name">澳洲储能大会</a>
                         2016年10月11日-12日  澳大利亚 墨尔本
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi.png"></a>
+                    <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ccav.png"></a>
                     <p>
                         <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="name">第三届中国商用车国际大会</a>
                         2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.iic-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/tpasa.png"></a>
+                    <a href="http://www.iic-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/iic.png"></a>
                     <p>
                         <a href="http://www.iic-annual.com/" target="_blank" class="name">印尼基础设施建设暨“一带一路”投资峰会</a>
                         2016年10月20-21日  印尼 雅加达
                     </p>
                 </li>
                 <li>
-                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/r7_06.jpg"></a>
+                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/dmpc.png"></a>
                     <p>
                         <a href="#" target="_blank" class="name">数字营销先锋大会</a>
                         2016年11月03-04日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.cipc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cors.png"></a>
+                    <a href="http://www.cipc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
                     <p>
                         <a href="http://www.cipc-annual.org.cn/" target="_blank" class="name">中国产业园区大会</a>
                         2016年11月09-10日  中国 上海
                     </p>
                 </li>
-                <li>
+                <li style="display:none;">
                     <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
                     <p>
                         <a href="#" target="_blank" class="name">第二届中国智能制造峰会</a>
@@ -127,21 +127,21 @@
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
+                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi2.png"></a>
                     <p>
                         <a href="http://www.theifpi.com/" target="_blank" class="name">第八届互联网金融与支付创新2016年度盛会</a>
                         2016年11月16-18日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gaaf.jpg"></a>
+                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/eis.jpg"></a>
                     <p>
                         <a href="http://www.eis-annual.com/" target="_blank" class="name">2016能源互联网暨“一带一路”高峰论坛</a>
                         2016年12月07-08日 中国 北京
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.dap-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
+                    <a href="http://www.dap-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/dapc.jpg"></a>
                     <p>
                         <a href="http://www.dap-annual.com/" target="_blank" class="name">第十三届亚太海洋油气大会</a>
                         2016年12月07-08日 印尼 雅加达
@@ -151,10 +151,16 @@
         </div>
         <div class="history-events col-xs-4">
             <p>往届回顾</p>
-            <a href="http://www.tpasa.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
-            <a href="http://www.gtf.org.cn" target="_blank">2016中国燃气轮机聚焦</a>
-            <a href="http://www.cpf-annual.com" target="_blank">第十届中国石化聚焦峰会2016</a>
-            <a href="http://www.theifpi.com" target="_blank">第七届互联网金融与支付创新大会</a>
+            <a href="http://www.theifpi.com/" target="_blank">第七届互联网金融创新大会</a>
+            <a href="http://www.essc.org.cn/" target="_blank">第六届中国国际储能电站大会</a>
+            <a href="http://www.gtf.org.cn/" target="_blank">第三届中国燃气轮机聚焦峰会</a>
+            <a href="http://www.gvc-annual.com/" target="_blank">2016第七届绿色汽车峰会</a>
+            <a href="http://www.tpasa.org.cn/" target="_blank">第五届主题公园与景区国际峰会</a>
+            <a href="http://www.thecipc.org.cn/2016East%20China" target="_blank">中国产业园区大会华东站</a>
+            <a href="http://www.oc-annual.com/" target="_blank">第十二届中国国际海洋油气大会暨展览会</a>
+            <a href="http://www.gaaf-annual.com/" target="_blank">全球资产配置聚焦</a>
+            <a href="http://www.cpf-annual.com/" target="_blank">第十届中国石化聚焦峰会</a>
+            <a href="http://www.cors.org.cn/" target="_blank">第四届中国全渠道零售峰会</a>
         </div>
     </div>
 </div>
