--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,7 +11,7 @@
                 </a>
             </div>
             <div class="banner-item">
-                <a href="./about/to_customers.html" target="_blank">
+                <a href="./events.html" target="_blank">
                     <img src="../img/客户.png"/>
                 </a>
             </div>
