--- a/src/html/events.html
+++ b/src/html/events.html
@@ -78,42 +78,42 @@
         <div class="col-xs-8">
             <ul class="event-list">
                 <li>
-                    <a href="http://www.ffa-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ffa2016.png"></a>
+                    <a href="http://www.ffa-annual.com" target="_blank" class="thumb"><img src="../img/ffa.jpg"></a>
                     <p>
                         <a href="http://www.ffa-annual.com" target="_blank" class="name">亚洲FPSO&FLNG大会</a>
                         2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.esa-annual.com" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/esa2.png"></a>
+                    <a href="http://www.esa-annual.com" target="_blank" class="thumb"><img src="../img/esa.jpg"></a>
                     <p>
                         <a href="http://www.esa-annual.com" target="_blank" class="name">澳洲储能大会</a>
                         2016年10月11日-12日  澳大利亚 墨尔本
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="thumb"><img src="http://elbucket.qiniudn.com/o_1al4ldrahs551lpf1dctcl9b4lf.jpg?imageMogr2/thumbnail/800"></a>
+                    <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="thumb"><img src="../img/ccvc.jpg"></a>
                     <p>
                         <a href="http://www.ccvc-annual.org.cn/" target="_blank" class="name">第三届中国商用车国际大会</a>
                         2016年10月20-21日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.iic-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/iic.png"></a>
+                    <a href="http://www.iic-annual.com/" target="_blank" class="thumb"><img src="../img/iic.jpg"></a>
                     <p>
                         <a href="http://www.iic-annual.com/" target="_blank" class="name">印尼基础设施建设暨“一带一路”投资峰会</a>
                         2016年10月20-21日  印尼 雅加达
                     </p>
                 </li>
                 <li>
-                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/dmpc.png"></a>
+                    <a href="#" target="_blank" class="thumb"><img src="../img/dmpc.jpg"></a>
                     <p>
                         <a href="#" target="_blank" class="name">数字营销先锋大会</a>
                         2016年11月03-04日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.cipc-annual.org.cn/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/cipc2016.jpg"></a>
+                    <a href="http://www.cipc-annual.org.cn/" target="_blank" class="thumb"><img src="../img/cipc.jpg"></a>
                     <p>
                         <a href="http://www.cipc-annual.org.cn/" target="_blank" class="name">中国产业园区大会</a>
                         2016年11月09-10日  中国 上海
@@ -127,14 +127,14 @@
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/ifpi2.png"></a>
+                    <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="../img/ifpi.jpg"></a>
                     <p>
                         <a href="http://www.theifpi.com/" target="_blank" class="name">第八届互联网金融与支付创新2016年度盛会</a>
                         2016年11月16-18日  中国 上海
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/eis.jpg"></a>
+                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="../img/eis.jpg"></a>
                     <p>
                         <a href="http://www.eis-annual.com/" target="_blank" class="name">2016能源互联网暨“一带一路”高峰论坛</a>
                         2016年12月07-08日 中国 北京
