--- a/src/html/index.html
+++ b/src/html/index.html
@@ -68,7 +68,7 @@
                         <img src="http://elbucket.qiniudn.com/index-v3.jpg">
                     </div>
                     <div class="desc">
-                        主题公园国际峰会
+                        第五届主题公园&景区国际峰会
                     </div>
                     <div class="desc-bg"></div>
                     <i class="glyphicon glyphicon-play"></i>
@@ -78,17 +78,17 @@
                         <img src="http://elbucket.qiniudn.com/index-v4.jpg">
                     </div>
                     <div class="desc">
-                        国际海洋油气大会
+                        第十二届中国海洋油气大会暨展览会
                     </div>
                     <div class="desc-bg"></div>
                     <i class="glyphicon glyphicon-play"></i>
                 </div>
                 <div class="thumb video" vid="v5">
                     <div class="link-block" target="_blank" href="http://v.youku.com/v_show/id_XMTQwOTk3MDkyNA==.html">
-                        <img src="http://elbucket.qiniudn.com/index-v5.jpg">
+                        <img src="../img/ifpi-v.jpg">
                     </div>
                     <div class="desc">
-                        互联网金融与支付创新大会
+                        第六届互联网金融与支付创新盛会2015
                     </div>
                     <div class="desc-bg"></div>
                     <i class="glyphicon glyphicon-play"></i>
@@ -98,7 +98,7 @@
                         <img src="http://elbucket.qiniudn.com/index-v6.jpg">
                     </div>
                     <div class="desc">
-                        绿色汽车
+                        第七届绿色汽车峰会2016
                     </div>
                     <div class="desc-bg"></div>
                     <i class="glyphicon glyphicon-play"></i>
