--- a/src/html/about/consulting.html
+++ b/src/html/about/consulting.html
@@ -20,7 +20,7 @@
                     <a><span class="glyphicon glyphicon-record" ></span> 您想要了解的决策者</a>
                     <ul class="sub-ul">
                         <li><a href="./to_partners.html">如果您是合作伙伴</a></li>
-                        <li><a href="./to_customers.html">如果您是客户</a></li>
+                        <!-- <li><a href="./to_customers.html">如果您是客户</a></li> -->
                         <li><a href="./to_candidates.html">如果您是应聘者</a></li>
                         <li><a href="./to_investors.html">如果您是投资人</a></li>
                     </ul>
