[sean] - fix style and content

--- a/src/html/events.html
+++ b/src/html/events.html
@@ -106,9 +106,9 @@
                     </p>
                 </li>
                 <li>
-                    <a href="#" target="_blank" class="thumb"><img src="../img/dmpc.jpg"></a>
+                    <a href="http://www.dmpc-annual.com" target="_blank" class="thumb"><img src="../img/dmpc.jpg"></a>
                     <p>
-                        <a href="#" target="_blank" class="name">数字营销先锋大会</a>
+                        <a href="http://www.dmpc-annual.com" target="_blank" class="name">数字营销先锋大会</a>
                         2016年11月03-04日  中国 上海
                     </p>
                 </li>
@@ -127,6 +127,13 @@
                     </p>
                 </li>
                 <li>
+                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="../img/eis.jpg"></a>
+                    <p>
+                        <a href="http://www.eis-annual.com/" target="_blank" class="name">2016能源互联网暨“一带一路”高峰论坛</a>
+                        2016年11月09-10日 中国 上海
+                    </p>
+                </li>
+                <li>
                     <a href="http://www.theifpi.com/" target="_blank" class="thumb"><img src="../img/ifpi.jpg"></a>
                     <p>
                         <a href="http://www.theifpi.com/" target="_blank" class="name">第八届互联网金融与支付创新2016年度盛会</a>
@@ -134,10 +141,10 @@
                     </p>
                 </li>
                 <li>
-                    <a href="http://www.eis-annual.com/" target="_blank" class="thumb"><img src="../img/eis.jpg"></a>
+                    <a href="http://www.ips-cdmc.com/" target="_blank" class="thumb"><img src="../img/ips.jpg"></a>
                     <p>
-                        <a href="http://www.eis-annual.com/" target="_blank" class="name">2016能源互联网暨“一带一路”高峰论坛</a>
-                        2016年12月07-08日 中国 北京
+                        <a href="http://www.ips-cdmc.com/" target="_blank" class="name">互联网+体育创新峰会暨颁奖盛典</a>
+                        2016年11月24-25日  中国 北京
                     </p>
                 </li>
                 <li>
