[sean] - update the events add cifm

--- a/src/html/events.html
+++ b/src/html/events.html
@@ -119,10 +119,10 @@
                         2016年11月09-10日  中国 上海
                     </p>
                 </li>
-                <li style="display:none;">
-                    <a href="#" target="_blank" class="thumb"><img src="http://www.cdmc.org.cn/images/logo/gtf.jpg"></a>
+                <li>
+                    <a href="#" target="_blank" class="thumb"><img src="../img/cifm.jpg"></a>
                     <p>
-                        <a href="#" target="_blank" class="name">第二届中国智能制造峰会</a>
+                        <a href="http://www.sinomanuf.com" target="_blank" class="name">第二届中国智能制造峰会</a>
                         2016年11月09-10日  中国 上海
                     </p>
                 </li>
