--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,12 +7,12 @@
         <div class="slide">
             <div class="banner-item">
                 <a href="./about/to_partners.html" target="_blank">
-                    <img src="../img/合作伙伴.png"/>
+                    <img src="../img/合作伙伴.jpg"/>
                 </a>
             </div>
             <div class="banner-item">
                 <a href="./events.html" target="_blank">
-                    <img src="../img/客户.png"/>
+                    <img src="../img/客户.jpg"/>
                 </a>
             </div>
             <div class="banner-item">
@@ -22,7 +22,7 @@
             </div>
             <div class="banner-item">
                 <a href="./about/to_investors.html" target="_blank">
-                    <img src="../img/投资者.png"/>
+                    <img src="../img/投资者.jpg"/>
                 </a>
             </div>
         </div>
