[panex] - added responsive bootstrap menu

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <div class="site-main index">
     <!-- banner -->
     <div id="banner">
-        <div class="slide">
+        <div class="slide responsive">
             <div class="banner-item">
                 <a href="./about/to_partners.html" target="_blank">
                     <img src="../img/合作伙伴.jpg"/>
