--- a/src/html/common/navigator.html
+++ b/src/html/common/navigator.html
@@ -1,9 +1,15 @@
 <header class="site-header">
     <div class="bg"></div>
     <div class="container-float">
-        <div class="container">
+        <div class="container-fluid">
             <nav class="navbar" role="navigation">
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">  
+                        <span class="sr-only">Toggle navigation</span>  
+                        <span class="icon-bar"></span>  
+                        <span class="icon-bar"></span>  
+                        <span class="icon-bar"></span>  
+                    </button>
                     <a class="navbar-brand" href="./index.html">
                         <img src="../img/logo.png" alt="">
                     </a>
